--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -1,5 +1,10 @@
 {
-  "open": "Відкрита каса",
-  "add": "додати"
+  "open": "ВІДКРИТА КАСА",
+  "add": "додати",
+  "welcome": "ЗАПРОШУЄМО!",
+  "info":"СКАНУЙТЕ СТАТТЮ АБО НАТИСНІТЬ ПОЧАТИ, ЩОБ ПОЧАТИ",
+  "start": "ПОЧАТОК",
+  "bag": "РЕКЛАМА",
+  "help": "ДОПОМОГА"
 
 }
