--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -1,5 +1,9 @@
 {
-  "open": "Kasa Otwarta",
-  "add": "Dodaj"
-
+  "open": "KASA OTWARTA",
+  "add": "Dodaj",
+  "welcome": "ZAPRASZAMY!",
+  "info":"ZESKANUJ ARTYKUŁ LUB DOTKNIJ START, ABY ROZPOCZĄĆ",
+  "start": "START",
+  "bag": "REKLAMÓWKA",
+  "help": "POMOC"
 }
