seller login page with pin, help button to modal and modal to login page, more unit tests

--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -5,5 +5,7 @@
   "info":"ZESKANUJ ARTYKUŁ LUB DOTKNIJ START, ABY ROZPOCZĄĆ",
   "start": "START",
   "bag": "REKLAMÓWKA",
-  "help": "POMOC"
+  "help": "POMOC",
+  "login":"Logowanie Pracownika",
+  "cardscan": "ZESKANUJ KARTE, ABY ROZPOCZĄĆ"
 }
