--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -6,5 +6,8 @@
   "bag": "REKLAMÓWKA",
   "help": "POMOC",
   "login":"Logowanie Pracownika",
-  "cardscan": "ZESKANUJ KARTE, ABY ROZPOCZĄĆ"
+  "cardscan": "ZESKANUJ KARTE, ABY ROZPOCZĄĆ",
+  "YourShopping": "TWOJE ZAKUPY",
+  "Total": "Razem",
+  "Pay": "Zakończ i zapłać"
 }
