--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -4,6 +4,10 @@
   "info":"СКАНУЙТЕ СТАТТЮ АБО НАТИСНІТЬ ПОЧАТИ, ЩОБ ПОЧАТИ",
   "start": "ПОЧАТОК",
   "bag": "РЕКЛАМА",
-  "help": "ДОПОМОГА"
-
+  "help": "ДОПОМОГА",
+  "login":"Вхід співробітника",
+  "cardscan": "ЩОБ ПОЧАТИ, СКАНУЙТЕ СВОЮ КАРТКУ",
+  "YourShopping": "ВАШІ ПОКУПКИ",
+  "Total": "Всього",
+  "Pay": "Закінчити і заплатити"
 }
