--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -7,7 +7,8 @@
   "help": "ДОПОМОГА",
   "login":"Вхід співробітника",
   "cardscan": "ЩОБ ПОЧАТИ, СКАНУЙТЕ СВОЮ КАРТКУ",
-  "YourShopping": "ВАШІ ПОКУПКИ",
-  "Total": "Всього",
-  "Pay": "Закінчити і заплатити"
+  "yourshopping": "ВАШІ ПОКУПКИ",
+  "total": "Всього",
+  "pay": "Закінчити і заплатити",
+  "scaninfo": "Відскануйте код товару або виберіть категорію"
 }
