--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -7,7 +7,8 @@
   "help": "HELFEN",
   "login":"Mitarbeiter-Login",
   "cardscan": "SCANNEN SIE IHRE KARTE, UM ZU STARTEN",
-  "YourShopping": "IHR EINKAUF",
-  "Total": "Summe",
-  "Pay": "Beenden und bezahlen"
+  "yourshopping": "IHR EINKAUF",
+  "total": "Summe",
+  "pay": "Beenden und bezahlen",
+  "scaninfo": "Scannen Sie den Produktcode oder wählen Sie Kategorien aus"
 }
