--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -10,5 +10,7 @@
   "yourshopping": "ВАШІ ПОКУПКИ",
   "total": "Всього",
   "pay": "Закінчити і заплатити",
-  "scaninfo": "Відскануйте код товару або виберіть категорію"
+  "scaninfo": "Відскануйте код товару або виберіть категорію",
+  "payinfo": "Виберіть спосіб оплати"
+
 }
