--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -11,6 +11,16 @@
   "total": "Всього",
   "pay": "Закінчити і заплатити",
   "scaninfo": "Відскануйте код товару або виберіть категорію",
-  "payinfo": "Виберіть спосіб оплати"
+  "payinfo": "Виберіть спосіб оплати",
+  "enternumber": "Назвіть номер",
+  "enterbarcode": "Введіть штрих-код",
+  "delete": "Видалити",
+  "accept": "Схвал",
+  "barcode":"ШТРИХ-КОД",
+  "search":"ПОШУК",
+  "error":  "Виникла помилка при оформленні замовлення, касу закрито. Зверніться за допомогою до продавця.",
+  "sellercall": "Зателефонуйте своєму дилеру",
+  "close": "КАСУ ЗАЧИНЕНО",
+  "pin": "Введіть PIN-код"
 
 }
