--- a/src/locales/ua.json
+++ b/src/locales/ua.json
@@ -18,9 +18,12 @@
   "accept": "Схвал",
   "barcode":"ШТРИХ-КОД",
   "search":"ПОШУК",
-  "error":  "Виникла помилка при оформленні замовлення, касу закрито. Зверніться за допомогою до продавця.",
+  "error":  "Вибачте за незручності! Наш персонал був повідомлений і вже в дорозі, щоб вирішити цю ситуацію. Дякуємо за ваше терпіння!",
   "sellercall": "Зателефонуйте своєму дилеру",
   "close": "КАСУ ЗАЧИНЕНО",
-  "pin": "Введіть PIN-код"
+  "pin": "Введіть PIN-код",
+  "helpneeded": "Наш персонал вже в дорозі, щоб надати вам допомогу. Прошу про розуміння.",
+  "adulterror": "Увага: Куплений продукт призначений для дорослих. Наш персонал перевірить ваш вік. Дякуємо за співпрацю!",
+  "noproduct":"Вибачте, сканований продукт не знайдено. Будь ласка, спробуйте ще раз або зверніться до нашого персоналу за допомогою. Дякуємо за розуміння!"
 
 }
